# pasword-mango

./: .gitignore  README.md  go.mod  go.sum  handlers.go  main.go  middleware.go  pasword-mango.pro  resources.qrc  server.go
auth/: test.go
data/: config.go  cred.go  helpers.go  models.go  node.go  search.go  security.go
server/: README.md  handlers.go  main.go
server/data/: config.go  cred.go  helpers.go  security.go
src/: CMakeLists.txt  addeditdialog.cpp  addeditdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  passworddetaildialog.cpp  passworddetaildialog.h
styles/: app.qss
